--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-gallery",
-  "version": "0.0.0",
+  "name": "gallerygrid",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/herosheets/angular-gallery.git"
+    "url": "https://github.com/herosheets/gallerygrid.git"
   },
   "author": "Kyle Kemp <kyle@seiyria.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/herosheets/angular-gallery/issues"
+    "url": "https://github.com/herosheets/gallerygrid/issues"
   },
   "devDependencies": {
     "grunt-contrib-copy": "~0.7.0",
