--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "bower install"
+    "install": "bower install",
+    "build": "grunt build",
+    "build-lib": "grunt build-lib",
+    "watch": "grunt watch"
   },
   "repository": {
     "type": "git",
@@ -17,19 +20,19 @@
     "url": "https://github.com/herosheets/gallerygrid/issues"
   },
   "devDependencies": {
-    "grunt-contrib-copy": "~0.7.0",
-    "load-grunt-tasks": "~1.0.0",
-    "grunt-contrib-coffee": "~0.12.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-connect": "~0.8.0",
-    "grunt": "~0.4.5",
     "coffeelint": "~1.6.1",
+    "grunt": "^1.0.2",
     "grunt-coffeelint": "0.0.13",
-    "grunt-contrib-less": "~0.12.0",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-open": "~0.2.3",
+    "grunt-contrib-coffee": "~0.12.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-jade": "~0.13.0",
-    "grunt-contrib-uglify": "~0.6.0"
+    "grunt-contrib-less": "~0.12.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-open": "~0.2.3",
+    "load-grunt-tasks": "~1.0.0"
   },
   "build": {
     "js": [
