--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gallerygrid",
   "version": "0.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/js/gallerygrid.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "grunt build",
